# database-system

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.shell  README.md  backlog.md  docker-compose.yml
cli/: Cargo.toml  README.md
cli-new/: Cargo.toml
cli-new/src/: constants.rs  input.rs  lib.rs  main.rs
cli/src/: collection.rs  config.rs  constants.rs  database.rs  document.rs  lib.rs  main.rs  util.rs
docs/: cli-design.md  cli.md  config.md  database.md  datatypes.md  docker.md  driver.md  engine-design.md  engine.md  logs.md  shell.md  storage-system.md  storage.md
driver/: Cargo.toml  README.md  design.md
driver/src/: client.rs  collection.rs  database.rs  document.rs  lib.rs
driver/src/client/: error.rs
driver/tests/: integration.rs
driver/tests/client/: get_database.rs  mod.rs
driver/tests/collection/: delete.rs  find.rs  insert.rs  mod.rs  replace.rs
driver/tests/common/: config.rs  document.rs  mod.rs
driver/tests/database/: get_collection.rs  get_metadata.rs  mod.rs
engine/: Cargo.toml  README.md
engine-core/: Cargo.toml  README.md  build.rs
engine-core-new/: Cargo.toml
engine-core/src/: api.rs  config.rs  constants.rs  db.rs  db_manager.rs  db_manager_pb.rs  input_data.rs  lib.rs  logging.rs  logs.rs  storage.rs
engine-core/src/config/: api.rs
engine-core/src/db/: collection.rs  collection_pb.rs  data_type.rs  database.rs  database_pb.rs  document.rs  document_pb.rs  error.rs
engine-core/src/logging/: error.rs
engine-core/src/proto/: database.proto
engine-core/src/storage/: api.rs  collection.rs  database.rs  db_manager.rs  document.rs  error.rs
engine-core/tests/: database.rs
engine-core/tests/common/: mod.rs
engine/src/: config.rs  engine.rs  input_data.rs  lib.rs  logging.rs  storage.rs  util.rs
engine/src/config/: api.rs  config_manager.rs
engine/src/logging/: error.rs
engine/src/storage/: api.rs  collection.rs  database.rs  db_manager.rs  document.rs  error.rs
engine/tests/: database.rs  integration.rs
engine/tests/collection/: create_collection.rs  delete_collection.rs  find_collection.rs  mod.rs
engine/tests/common/: config.rs  document.rs  mod.rs
engine/tests/config/: db_dir.rs  load_config.rs  logs_dir.rs  mod.rs
engine/tests/database/: create_database.rs  delete_database.rs  find_database.rs  mod.rs  modify_database.rs
engine/tests/document/: create_document.rs  delete_document.rs  find_document.rs  mod.rs  replace_document.rs
engine/tests/logging/: log_error.rs  log_event.rs  mod.rs
examples/bookstore/: Cargo.toml  README.md
examples/bookstore/src/: book.rs  cli.rs  db.rs  document.rs  lib.rs  main.rs
examples/driver-test/: Cargo.toml
examples/driver-test/src/: lib.rs  main.rs
shell/: Cargo.toml
shell/src/: cli.rs  collection.rs  config.rs  database.rs  document.rs  lib.rs  main.rs  util.rs
src/: lib.rs  main.rs
