[workspace]
resolver = "2"
members = [
    "shell",
    "engine",
    "driver",
    "examples/driver-test",
    "examples/bookstore",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
description = "NoSQL document database system"
license = "MIT"
repository = "https://github.com/hollowdll/database-system"
homepage = "https://github.com/hollowdll/database-system"
