[package]
name = "engine"
version = "0.2.1"
edition = "2021"
description = "Database engine"
license = "MIT"
repository = "https://github.com/hollowdll/database-system"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# chrono crate depends on vulnerable version of time (https://github.com/time-rs/time)
# but does not use the vulnerable parts (https://github.com/chronotope/chrono/releases/tag/v0.4.20-rc.1)
chrono = "0.4.24"
tempfile = "3.5.0"
bytes = "1.4.0"
prost = "0.11"

[build-dependencies]
prost-build = "0.11"
