[package]
name = "shell"
version = "0.1.0"
edition = "2021"
description = "Database shell"
default-run = "shell"
license = "MIT"
repository = "https://github.com/hollowdll/database-system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
